# Kiwi

./: CHANGELOG  CMakeLists.txt  KNOWN_ISSUES  LICENSE  README  TODO
include/: Entry.h  Kiwi.h  Patcher.h  Pixy.h  PixyExceptions.h  Repository.h  Tarball.h  Utility.h  moc_Kiwi.cxx
resources/: kiwi.ui  kiwi_about.ui  media.qrc.depends
src/: Kiwi.cpp  Patcher.cpp  PixyLogLayout.cpp  Repository.cpp  bsdiff.c  bsdiff.cpp.bk  bspatch.cpp.bk  getlogin.cpp  main.cpp
